--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,8 @@
     <meta name="theme-color" content="#000000" />    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
-    <!--TODO: Cambiar la fuente por la requerida-->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <!--TODO: Cambiar titulo de la app-->
-    <title>Title - devchallenges.io</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
+    <title>Country Page - frontendmentor.io</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
